--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,42 @@
 *{
     margin: 0;
     padding: 0;
+
+}
+.header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: url("/assets/images/banner.png");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+ 
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 6px;
 }
 
-body{
-    background: rgb(80, 86, 93);
-    
+/* nav img{
+    width: 150px;
+} */
+
+.nav-links{
+    flex: 1;
+    text-align: right;
 }
+
+.nav-links ul li{
+    list-style: none;
+    display: inline-block
+    padding: 8px 12px;
+    position: relative;
+  }
+ 
+  .nav-links ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+  }
