--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;0,500;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300;1,400&family=Montserrat:wght@300;400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;1,500&display=swap');
 
 * {
     margin: 0;
@@ -7,22 +7,23 @@
 }
 
 body {
-    font-family: lato, sans-serif;
-    font-weight: 300;
-    color: rgb(25, 29, 33)
-}
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    color: #24252a;
 
-.header {
-    min-height: 11.5vh;
+    }
+.menu {
+    height: 150px;
     width: 100%;
-    background: lightblue;
+    background-color: rgb(196, 224, 233);
     background-position: center;
     background-size: cover;
     position: relative;
+    
 }
 
 #logo {
-    width: 150px;
+    width: 145px;
     outline: 4px solid red;
     margin: 4px;
     float: left;
@@ -33,6 +34,30 @@ h1, h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
     color:black;
+}
+
+}
+#nav-links li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 6px;
+    float: right;
+    list-style-type: none;
+
+  
+} 
+#nav-links li a {
+  text-decoration: none;
+  font-size: 1.5em;
+  text-transform: uppercase;
+ 
+  
+}
+
+.hero-image{
+    width:100%;
+    height:500px;
 }
 /* navigation links */
 /* 
@@ -49,7 +74,7 @@ h1, h2 {
     flex: 1;
     text-align: right;
 } */
-
+/* 
 #nav-links {
     font-size: 200%;
     letter-spacing: 2px;
@@ -75,4 +100,4 @@ h1, h2 {
 
 #nav-links li a{
      text-decoration: none;
-}
+} */
